@@ -167,12 +167,6 @@
   <dt><a href="index.html#clnews.shell.CommandHelp.print_output">print_output() (clnews.shell.CommandHelp method)</a>
   </dt>
 
-      <dd><dl>
-        
-  <dt><a href="index.html#clnews.shell.CommandList.print_output">(clnews.shell.CommandList method)</a>
-  </dt>
-
-      </dl></dd>
   </dl></td>
 </tr></table>
 
