@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>CLNews v0.2.0 &mdash; CLNews 0.1.0 documentation</title>
+    <title>CLNews v0.2.1 &mdash; CLNews 0.1.0 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -44,8 +44,8 @@
         <div class="bodywrapper">
           <div class="body" role="main">
             
-  <div class="section" id="clnews-v0-2-0">
-<h1>CLNews v0.2.0<a class="headerlink" href="#clnews-v0-2-0" title="Permalink to this headline">¶</a></h1>
+  <div class="section" id="clnews-v0-2-1">
+<h1>CLNews v0.2.1<a class="headerlink" href="#clnews-v0-2-1" title="Permalink to this headline">¶</a></h1>
 <p>Contents:</p>
 <div class="toctree-wrapper compound">
 <ul class="simple">
@@ -111,17 +111,6 @@ retrieval fails.</dd>
 <code class="descname">execute</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#clnews.shell.CommandList.execute" title="Permalink to this definition">¶</a></dt>
 <dd><p>Executes the command.</p>
 <p>Lists all the available channels.</p>
-</dd></dl>
-
-<dl class="method">
-<dt id="clnews.shell.CommandList.print_output">
-<code class="descname">print_output</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#clnews.shell.CommandList.print_output" title="Permalink to this definition">¶</a></dt>
-<dd><p>Prints the output of the command</p>
-<dl class="docutils">
-<dt>Raises:</dt>
-<dd>ShellCommandOutputError: An error occured when the buffer is not a 
-list.</dd>
-</dl>
 </dd></dl>
 
 </dd></dl>
@@ -241,7 +230,7 @@ initialization</p>
         <div class="sphinxsidebarwrapper">
   <h3><a href="#">Table Of Contents</a></h3>
   <ul>
-<li><a class="reference internal" href="#">CLNews v0.2.0</a></li>
+<li><a class="reference internal" href="#">CLNews v0.2.1</a></li>
 <li><a class="reference internal" href="#module-clnews.shell">shell</a></li>
 <li><a class="reference internal" href="#module-clnews.news">news</a></li>
 <li><a class="reference internal" href="#module-clnews.exception">exceptions</a></li>
