@@ -3,7 +3,7 @@
    You can adapt this file completely to your liking, but it should at least
    contain the root `toctree` directive.
 
-CLNews v0.2.0 
+CLNews v0.2.1 
 =============
 
 Contents:
